deployment_redis.yml

---
apiVersion: v1
kind: Service
metadata:
  name: redis-swagger
  labels:
    app: redis-swagger
spec:
  type: NodePort
  selector:
    app: redis-swagger
  ports:
    - protocol: TCP
      port: 8085
      name: http
      targetPort: 8080
      nodePort: 30061

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-swagger
spec:
  selector:
    matchLabels:
      app: redis-swagger
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-swagger
    spec:
      containers:
        - name: redis-swagger
          image: bhoomikars/redis-swagger:latest
          ports:
            - containerPort: 8080
